--- a/index.html
+++ b/index.html
@@ -51,7 +51,16 @@
         />
 
         <label for="base">Base Color</label>
-        <input id="base" type="color" name="base" value="#ffc600" />
+		<input id="base" type="color" name="base" value="#ffc600" />
+		
+		<label> Filters
+			<select name="select" id="ba-select" style="color:black">
+				<option value="1977">1977</option>
+				<option value="lofi">lofi</option>
+        <option value="xpro">xpro</option>
+        <option value="pro">pro</option>
+			</select>
+		</label>
       </div>
       <div class="ba-row">
         <div class="ba-col-8">
